layout issues

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -22,7 +22,7 @@ h3 {
 
 .list {
   margin: 0;
-  padding: 0 0 0 25px;
+  padding: 0 0 0 20px;
   list-style: upper-roman;
 }
 
@@ -189,7 +189,6 @@ html {
 .chartContainer {
   margin: 0;
   padding: 5px;
-  height: 100%;
   overflow-y: scroll;
 }
 
@@ -203,4 +202,41 @@ html {
 
 .episodes {
   top
+}
+
+.nextReport {
+  margin-top: 25px;
+}
+
+.characterList {
+  list-style-type: none;
+  padding: 0 0 0 0;
+}
+
+.characterListItem {
+  display: inline-block;
+  width: 110px;
+  vertical-align: top;
+  text-align: center;
+}
+
+.characterTitle {
+  font-weight: bold;
+}
+
+.annotationBlock {
+  text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+    .chartContainer {
+      width: 600px;
+      margin: auto;
+    }
+    .chartContainerLeft {
+      width: 600px;
+    }
+    .chartContainerWide {
+      width: 100%;
+    }
 }
